--- a/src/Components/AddCard/styles.scss
+++ b/src/Components/AddCard/styles.scss
@@ -5,22 +5,17 @@
   padding: 0.5rem;
   border-radius: 8px;
   max-height: auto;
-  // min-height: 30%;
+  cursor: pointer;
   .title_div {
     .title {
       font-size: 15px;
-      // border: 1px solid rgb(220, 217, 217);
       margin-bottom: 0.5rem;
       text-align: center;
-      // text-decoration: underline;
-      // border-radius: 8px;
     }
   }
   .desc_div {
     .desc {
       font-size: 13px;
-      // border: 1px solid rgb(220, 217, 217);
-      // border-radius: 8px;
     }
   }
 }
