--- a/src/Components/Modal/styles.scss
+++ b/src/Components/Modal/styles.scss
@@ -6,9 +6,8 @@
   border-radius: 8px;
   width: 160%;
   max-height: 160%;
-background-color: #ffffff;
+  background-color: #ffffff;
 
-  
   .title_div {
     .title {
       font-size: 15px;
@@ -18,10 +17,9 @@ background-color: #ffffff;
       input[type="text"] {
         border: none;
         width: 99%;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
-
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+          "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+          "Helvetica Neue", sans-serif;
       }
     }
   }
@@ -30,14 +28,13 @@ background-color: #ffffff;
       font-size: 13px;
       border: 1px solid rgb(220, 217, 217);
       border-radius: 8px;
-      textarea{
+      textarea {
         border: none;
         max-width: 99%;
         width: 98%;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
-
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+          "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+          "Helvetica Neue", sans-serif;
       }
     }
   }
